Update compare page headers

--- a/contrail/frontend/apps/contrailsite/templates/list.html
+++ b/contrail/frontend/apps/contrailsite/templates/list.html
@@ -240,7 +240,7 @@
           <table id="instancesComp" class="table table-striped table-hover table-bordered comparetable" style="width:100%">
             <thead>
               <tr>
-                <th style="width:40%">Specifications</th>
+                <th style="width:40%">Provider</th>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -248,7 +248,19 @@
             </thead>
             <tbody>
               <tr>
+                <th>Instance Type</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
                 <th>Region</th>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>Operating System</th>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -260,25 +272,13 @@
                 <td></td>
               </tr>
               <tr>
-                <th>Memory (GiB)</th>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>Clock Speed</th>
+                <th>Memory (GB)</th>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>Price Type</th>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>Price Upfront</th>
                 <td></td>
                 <td></td>
                 <td></td>
