--- a/contrail/frontend/apps/contrailsite/templates/base.html
+++ b/contrail/frontend/apps/contrailsite/templates/base.html
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="/#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url "price" %}">Get Prices</a>
+            <a class="nav-link js-scroll-trigger" href="{% url "price" %}" style="color:#00948c;">Get Prices</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="{% url "help" %}">Help</a>
