--- a/contrail/frontend/apps/contrailsite/templates/instance.html
+++ b/contrail/frontend/apps/contrailsite/templates/instance.html
@@ -110,7 +110,7 @@
                                 &nbsp;&#8599;
                             {% endif %}
                             {% if detail.hint %}
-                                &nbsp;&#65533;
+                                <span style="font-size: small;"><i class="far fa-question-circle"></i></span>
                             {% endif %}
                         {% if detail.link %}</a>{% endif %}
                     </th>
