client home fix requests

--- a/contrail/frontend/apps/contrailsite/templates/home.html
+++ b/contrail/frontend/apps/contrailsite/templates/home.html
@@ -23,7 +23,7 @@
           <p class="text-white-50">
             Having trouble determining what’s the best virtual machine for you? Contrail is a public cloud market price tracker that allows you to easily access and compare the prices and characteristics of VMs over various locations and cloud providers. Filter the results to suit your needs and let Contrail help you decide what is the most affordable and best-suited VM for you!
           </p>
-          <a href="{% url "price" %}" class="btn btn-primary js-scroll-trigger">Find prices</a>
+          <a href="{% url "price" %}" class="btn btn-primary js-scroll-trigger">Get prices</a>
         </div>
       </div>
       <br><br><br>
@@ -47,7 +47,9 @@
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">See the costs of particular VM types over time.</h4>
                 <!-- <p class="mb-0 text-white-50">See the costs of particular VM types over time.</p> -->
-                <hr class="d-none d-lg-block mb-0 ml-0">
+                <hr class="d-none d-lg-block mb-0 ml-0"><br>
+                <a href="{% url "price" %}" class="btn btn-primary js-scroll-trigger">Get prices</a>
+
               </div>
             </div>
           </div>
@@ -65,7 +67,9 @@
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Compare price differences when VM characteristics change.</h4>
                 <!-- <p class="mb-0 text-white-50">Compare price differences when VM characteristics change.</p> -->
-                <hr class="d-none d-lg-block mb-0 mr-0">
+                <hr class="d-none d-lg-block mb-0 mr-0"><br>
+                <a href="{% url "price" %}" class="btn btn-primary js-scroll-trigger">Get prices</a>
+
               </div>
             </div>
           </div>
@@ -83,7 +87,9 @@
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Compare similar VMs across different regions and cloud providers.</h4>
                 <!-- <p class="mb-0 text-white-50">Compare similar VMs across different regions and cloud providers.</p> -->
-                <hr class="d-none d-lg-block mb-0 ml-0">
+                <hr class="d-none d-lg-block mb-0 ml-0"><br>
+                <a href="{% url "price" %}" class="btn btn-primary js-scroll-trigger">Get prices</a>
+
               </div>
             </div>
           </div>
@@ -101,7 +107,9 @@
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Test out different payment types to see what’s right for you.</h4>
                 <!-- <p class="mb-0 text-white-50">Test out different payment types to see what’s right for you.</p> -->
-                <hr class="d-none d-lg-block mb-0 mr-0">
+                <hr class="d-none d-lg-block mb-0 mr-0"><br>
+                <a href="{% url "price" %}" class="btn btn-primary js-scroll-trigger">Get prices</a>
+
               </div>
             </div>
           </div>
