add fix home pg spacing, add multiple choice for region

--- a/contrail/frontend/apps/contrailsite/static/css/custom.css
+++ b/contrail/frontend/apps/contrailsite/static/css/custom.css
@@ -14,6 +14,14 @@
 }
 
 
+.projects-section .project-text {
+  padding: 4.5rem;
+}
+
+.about-section {
+    padding-top: 0rem;
+}
+
 
 
 /* Ion.RangeSlider
