--- a/contrail/frontend/apps/contrailsite/templates/list.html
+++ b/contrail/frontend/apps/contrailsite/templates/list.html
@@ -16,7 +16,9 @@
   <nav id="sidebar">
     <form method="POST">
       {% csrf_token %}
-      <h4><strong>Set Attributes</strong></h4>
+      <h4><strong>Set Attributes</strong></h4><br>
+
+      <label class="form-check-label">Provider</label>
 
       <div class="form-group">
         <div id="div_id_amazon_web_services" class="form-check">
@@ -54,7 +56,7 @@
            Region
         </label>
         <div class="">
-          <select name="region" class="select form-control" id="id_region"> <option value="" selected="">All</option>
+          <select name="region" class="select form-control" id="id_region" multiple> <option value="" selected="">All</option>
               {% for r in regions %}
               <option value="{{ r }}" {% if form.region.data == r %}selected{% endif %}>{{ r }}</option>
               {% endfor %}
