--- a/contrail/frontend/apps/contrailsite/static/css/custom.css
+++ b/contrail/frontend/apps/contrailsite/static/css/custom.css
@@ -346,6 +346,34 @@ a.paginate_button:hover {
   background-color: #a1ccc9;
 }
 
+th a.sort-by {
+  float: right;
+  padding-top: 20px;
+  padding-left: 15px;
+	position: relative;
+}
+
+a.sort-by:before, a.sort-by:after {
+	border: 4px solid transparent;
+	content: "";
+	display: block;
+	height: 0;
+	right: 5px;
+	top: 50%;
+	position: absolute;
+	width: 0;
+}
+
+a.sort-by:before {
+	border-bottom-color: #666;
+	margin-top: -9px;
+}
+
+a.sort-by:after {
+	border-top-color: #666;
+	margin-top: 1px;
+}
+
 .compare-container {
   box-sizing: border-box;
 }
