--- a/contrail/frontend/apps/contrailsite/templates/list.html
+++ b/contrail/frontend/apps/contrailsite/templates/list.html
@@ -187,6 +187,7 @@
         <table id="instances" class="table table-striped table-bordered" style="width:100%">
           <thead>
               <tr>
+                  <th></th>
                   <th>Provider <a href="#" class="sort-by"></a></th>
                   <th>Instance Type <a href="#" class="sort-by"></a></th>
                   <th>Region <a href="#" class="sort-by"></a></th>
@@ -201,6 +202,7 @@
 
           {% for instance in instances %}
             <tr>
+              <td><input type="checkbox" /></td>
               <td><a href="{{ instance.url }}">{{ instance.provider }}</a></td>
               <td><a href="{{ instance.url }}">{{ instance.instanceType }}</a></td>
               <td>{{ instance.region }}</td>
@@ -216,6 +218,7 @@
           </tbody>
           <tfoot>
               <tr>
+                <th></th>
                 <th>Provider <a href="#" class="sort-by"></a></th>
                 <th>Instance Type <a href="#" class="sort-by"></a></th>
                 <th>Region <a href="#" class="sort-by"></a></th>
@@ -321,6 +324,7 @@
             {"type": "string"},
             {"type": "string"},
             {"type": "string"},
+            {"type": "string"},
             {"type": "num"},
             {"type": "num"},
             {"type": "string"},
@@ -338,15 +342,17 @@
      table.selectedProducts = 0;
 
     // selecting products
-    $('#instances tbody').on( 'click', 'tr', function () {
-      if ($(this).hasClass('selected')) {
-        $(this).removeClass('selected');
+    $('#instances tbody').on( 'click', 'input[type="checkbox"]', function () {
+      var row = $(this).closest('tr');
+      if (row.hasClass('selected')) {
+        row.removeClass('selected');
         table.selectedProducts -= 1;
-      } else if (table.selectedProducts < 3 && !$(this).hasClass('selected')) {
-          $(this).addClass('selected');
+      } else if (table.selectedProducts < 3 && !row.hasClass('selected')) {
+          row.addClass('selected');
           table.selectedProducts += 1;
       } else if (table.selectedProducts >= 3) {
         alert("Please only select up to 3 instances to be compared.");
+        $(this).prop('checked', false);
       }
     } );
 
@@ -359,7 +365,7 @@
   var btn = document.getElementById('comparebutton');
   var span = document.getElementsByClassName("close")[0];
   var compareTable = document.getElementById('instancesComp');
-  var numSpecs = document.getElementById('instances').rows[0].cells.length;
+  var numSpecs = (document.getElementById('instances').rows[0].cells.length) - 1;
 
   btn.onclick = function() {
     comparePop.style.display = "block";
@@ -370,16 +376,17 @@
       alert("Please select more than 1 instance to be compared.");
       document.getElementById("comparepop").style.display = "none";
     }
+
     else {
-      for (var i = 1; i <= numSelected; i++) {
-        for (var j = 0; j < numSpecs; j++) {
+      selectedRows.forEach(function(row) {
+        for (var i = 0; i < numSpecs; i++) {
           var newCell = document.createElement('td');
-          newCell.innerHTML = selectedRows[i-1].cells[j].innerText;
-          compareTable.rows[j].appendChild(newCell);
+          newCell.innerHTML = row.cells[i+1].innerText;
+          compareTable.rows[i].appendChild(newCell);
         }
-      }
+      });
     }
- }
+  }
 
   span.onclick = function() {
     comparePop.style.display = "none";
